Extra Practice with Tags & Page Linking

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[YOUR LANDING PAGE NAME]</title>
+    <title>About Us</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <a href="#" class="active-link">Home</a>
-    <a href="/about.html">About Us</a>
+    <a href="/">Home</a>
+    <a href="#" class="active-link">About Us</a>
     <a href="/blog/blog1.html">Blog 1</a>
     <a href="/blog/blog2.html">Blog 2</a>
     <a href="/blog/blog3.html">Blog 3</a>
@@ -23,6 +23,15 @@
         <section>
             <img src="/images/temp-logo.png" alt="main logo" />
             <h1>LaTorya is the Best!</h1>
+            <p class="bio">I am an <span style="color:crimson">Aspiring Software Engineer</span> 
+                with a big curiosity for tech and a growing 
+                love for coding. I am just getting started
+                and currently exploring different programming languages,
+                eager to learn and build projects that make a difference.
+                I enjoy problem-solving, collaborating with others,
+                and soaking up new knowledge like a sponge.
+                Every day is a chance to grow, and I am excited to see
+                where this path takes me.</p>
             <img src="/images/temp-main-image.png" alt="sale information" />
             <article class="scavenger-hunt">
                 <img src="/images/icons/1.png" alt="" />
@@ -85,11 +94,7 @@
             </div>
         </section>
 
-        <p>
-            <a href="https://www.reppedin.tech/repped-school" target="_blank" rel="noopener" class="cta-link">
-                Read More About Repped School
-            </a>
-        </p>
+
         <footer>
             <p>Copyright 2025, YOUR NAME. All Rights Reserved.</p>
         </footer>
