--- a/index.html
+++ b/index.html
@@ -45,20 +45,21 @@
             <h4>Some supporting text!</h4>
             <article>
                 <a href="/blog/blog1.html">
-                    <img src="/images/blogCards/1.png" alt="" />
+                    <img class="blog-img" src="images/blogCards/team-coding.png"
+                        alt="Five people looking at code on a computer screen" />
                     <p>Equidem soleo etiam quod uno Graeci, si aliter non possum idem pluribus.</p>
                 </a>
             </article>
 
             <article>
                 <a href="/blog/blog2.html">
-                    <img src="/images/blogCards/2.png" alt="" />
+                    <img class="blog-img" src="/images/blogCards/2.png" alt="" />
                     <p>Equidem soleo etiam quod uno Graeci, si aliter non possum idem pluribus.</p>
                 </a>
             </article>
             <article>
                 <a href="/blog/blog3.html">
-                    <img src="/images/blogCards/3.png" alt="" />
+                    <img class="blog-img" src="/images/blogCards/3.png" alt="" />
                     <p>Equidem soleo etiam quod uno Graeci, si aliter non possum idem pluribus.</p>
                 </a>
             </article>
@@ -84,7 +85,13 @@
                 </a>
             </div>
         </section>
+        <section>
+            <h2>Gallery</h2>
+            <img class="gallery-img" src="images/gallery/coding1.png" alt="backend coding development showing html with inline css"/>
+            <img class="gallery-img" src="images/gallery/coding2.png" alt="backend coding development showing arrays and if statements"/>
+            <img class="gallery-img" src="images/gallery/coding3.png" alt="backend coding development showing unordered lists"/>
 
+        </section>
         <p>
             <a href="https://www.reppedin.tech/repped-school" target="_blank" rel="noopener" class="cta-link">
                 Read More About Repped School
