Added Flexbox and Corrected link

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
             <button>View My Resume</button>
             <button>Check My LinkedIn</button>
         </section>
-        <section>
+        <section class="container">
             <div>
-                <a href="www.linkedin.com/in/iamlatorya" target="_blank">
+                <a href="https://www.linkedin.com/in/iamlatorya" target="_blank">
                     <img src="/images/socialIcons/1.png" alt="" /> LinkedIn
                 </a>
             </div>
@@ -87,10 +87,12 @@
         </section>
         <section>
             <h2>Gallery</h2>
-            <img class="gallery-img" src="images/gallery/coding1.png" alt="backend coding development showing html with inline css"/>
-            <img class="gallery-img" src="images/gallery/coding2.png" alt="backend coding development showing arrays and if statements"/>
-            <img class="gallery-img" src="images/gallery/coding3.png" alt="backend coding development showing unordered lists"/>
-
+            <img class="gallery-img" src="images/gallery/coding1.png"
+                alt="backend coding development showing html with inline css" />
+            <img class="gallery-img" src="images/gallery/coding2.png"
+                alt="backend coding development showing arrays and if statements" />
+            <img class="gallery-img" src="images/gallery/coding3.png"
+                alt="backend coding development showing unordered lists" />
         </section>
         <p>
             <a href="https://www.reppedin.tech/repped-school" target="_blank" rel="noopener" class="cta-link">
