Edited images and links

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                 and soaking up new knowledge like a sponge.
                 Every day is a chance to grow, and I am excited to see
                 where this path takes me.</p>
-            <img src="/images/temp-main-image.png" alt="sale information" />
+            <img class="resize-image" src="/images/temp-main-image.png" alt="sale information" />
             <article class="scavenger-hunt">
                 <img src="/images/icons/1.png" alt="" />
                 <p>LaTorya is still the best!</p>
@@ -96,7 +96,7 @@
 
 
         <footer>
-            <p>Copyright 2025, YOUR NAME. All Rights Reserved.</p>
+            <p>Copyright 2025, I am LaTorya. All Rights Reserved.</p>
         </footer>
 
     </main>
