--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section>
             <img src="/images/temp-logo.png" alt="main logo" />
             <h1>LaTorya is the Best!</h1>
-            <img src="/images/temp-main-image.png" alt="sale information" />
+            <img class="resize-image" src="/images/temp-main-image.png" alt="sale information" />
             <article class="scavenger-hunt">
                 <img src="/images/icons/1.png" alt="" />
                 <p>LaTorya is still the best!</p>
@@ -100,7 +100,7 @@
             </a>
         </p>
         <footer>
-            <p>Copyright 2025, YOUR NAME. All Rights Reserved.</p>
+            <p>Copyright 2025, I am LaTorya. All Rights Reserved.</p>
         </footer>
 
     </main>
