Resized Images and Text

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <!-- Create a main element with a border around it  -->
     <main class="main-border">
         <section>
-            <img src="/images/temp-logo.png" alt="main logo" />
+            <img class="resize-image" src="/images/temp-logo.png" alt="main logo" />
             <h1>LaTorya is the Best!</h1>
             <p class="bio">I am an <span style="color:crimson">Aspiring Software Engineer</span> 
                 with a big curiosity for tech and a growing 
@@ -54,20 +54,20 @@
             <h4>Some supporting text!</h4>
             <article>
                 <a href="/blog/blog1.html">
-                    <img src="/images/blogCards/1.png" alt="" />
+                    <img class="resize-image" src="/images/blogCards/1.png" alt="" />
                     <p>Equidem soleo etiam quod uno Graeci, si aliter non possum idem pluribus.</p>
                 </a>
             </article>
 
             <article>
                 <a href="/blog/blog2.html">
-                    <img src="/images/blogCards/2.png" alt="" />
+                    <img class="resize-image" src="/images/blogCards/2.png" alt="" />
                     <p>Equidem soleo etiam quod uno Graeci, si aliter non possum idem pluribus.</p>
                 </a>
             </article>
             <article>
                 <a href="/blog/blog3.html">
-                    <img src="/images/blogCards/3.png" alt="" />
+                    <img class="resize-image" src="/images/blogCards/3.png" alt="" />
                     <p>Equidem soleo etiam quod uno Graeci, si aliter non possum idem pluribus.</p>
                 </a>
             </article>
