--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Create a main element with a border around it  -->
     <main class="main-border">
         <section>
-            <img src="/images/temp-logo.png" alt="main logo" />
+            <img class="resize-image" src="/images/temp-logo.png" alt="main logo" />
             <h1>LaTorya is the Best!</h1>
             <img class="resize-image" src="/images/temp-main-image.png" alt="sale information" />
             <article class="scavenger-hunt">
