--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             </article>
             <article>
                 <img src="/images/icons/2.png" alt="" />
-                <p>Equidem soleo etiam quod uno Graeci, si aliter non possum idem pluribus.</p>
+                <p>Psssttt... There is a secret clickable spot waiting to be discovered.
+                    Does it come with a prize? Hmmmm... Find it and see! Have fun clicking. </p>
             </article>
             <article>
                 <img src="/images/icons/3.png" alt="" />
